app/javascript/stylesheets/application.scss
/* ... */
.parallax {
  position: absolute;
  width: 100%;
  height: 95vh;
  background: #252c5a;
  overflow: hidden;
}

.parallax #scene .layer {
  position: absolute;
  top: 0;
  left: 0;
  height: 95vh;
  width: 100%;
  overflow: hidden;
}

.parallax #scene .layer img {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: auto;
  overflow: hidden;
}

#main-text {
  position: relative;
  color: white;
  font-size: 13vw;
  top: 40vh;
  left: 20vw;
}

#imprint-welcome-text {
  position: relative;
  color: rgba(255,255,255,0.7);
  font-size: 4vw;
  z-index: 3;
  top: 30vh;
  left: 10vw;
}

#rocket {
  animation: x-axis 32s infinite cubic-bezier(0.02, 0.01, 0.21, 1);
}

#rocket-wrapper {
  animation: y-axis 8s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64)
}

@keyframes y-axis {
  50% {
    animation-timing-function: cubic-bezier(0.17, 0.5, 0.6, 0.4);
    transform: translateY(10vh);
  }
}

@keyframes x-axis {
  50% {
    animation-timing-function: cubic-bezier(0.17, 0.5, 0.6, 0.4);
    transform: translateX(60vw);
  }
}


/*********************/
/* About us section */
/********************/

#about_us_section {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.background-team {
  position: relative;
  justify-content: center;
  align-items: baseline;
  overflow: hidden;
  height: 100%;
}

.background-team img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  object-fit: cover;
}

#team-link {
  border-radius: 10px;
  height: auto;
  display: flex;
  justify-content: center;
  position: relative;
  top: 10px;
}

.wrapper {
  height: 300px;
  padding: 0 !important;
}


/************************/
/** Daily life section **/
/************************/

.daily-life-images-wrapper {
  display: flex;
  flex-flow: column;
  overflow: hidden;
  justify-content: space-between;
  align-items: space-between;
  .daily-life-example-image {
    max-width: 100%;
    margin-top: 1em;
    height: auto;
  }
}

/*********************************/
/** Room plan section ************/
/*********************************/

/*thats the parent div which holds the sub elements with absolute positions */
.room-plan-animated {
  position: relative;
  top: 0;
  left: 0;
}

#room-plan {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  margin-bottom: 15%;
}

/* general room plan icon style */
.camera-icon {
  position: absolute;
  color: #7c87fd;
  font-size: 0.9em;
  z-index: 10;
}

/* general room plan detail photo style */
.detail-photo-vertical {
  position: absolute;
  max-width: 17vw;
  z-index: 10;
}

/* general room plan detail photo style */
.detail-photo-horizontal {
  position: absolute;
  max-width: 30vw;
  z-index: 10;
}

/***********************/
/* general start image */
/**********************/

/* photo will be overlayed by other detail photos */
#children-playing-in-garden-detail-photo {
  top: 34%;
  left: 0;
  opacity: 1;
  z-index: 0; /* make sure it is below the other images */
}

/* hide the default starting image by hovering over icon */
.hide-element:hover ~ #children-playing-in-garden-detail-photo {
  opacity: 0;
}

/************/
/* kitchen */
/************/

/* kitchen room plan icon and photo */
#kitchen-icon {
  left: 44%;
  top: 38%;
}

/*hovering over the icon will change it to red */
#kitchen-icon:hover {
  color: red;
}

#kitchen-detail-photo {
  top: 34%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the kitchen image */
#kitchen-icon:hover + img {
  opacity: 1;
}

/****************/
/* house entry */
/***************/

/* house-entry room plan icon and photo */
#house-entry-icon {
  left: 49%;
  top: 57%;
}

/*hovering over the icon will change it to red */
#house-entry-icon:hover {
  color: red;
}

#house-entry-detail-photo {
  top: 34%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the house-entry image */
#house-entry-icon:hover + img {
  opacity: 1;
}

/************/
/* wardrobe */
/************/

/* wardrobe room plan icon and photo */
#wardrobe-icon {
  left: 50%;
  top: 15%;
}

/*hovering over the icon will change it to red */
#wardrobe-icon:hover {
  color: red;
}

#wardrobe-detail-photo {
  top: 34%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the wardrobe image */
#wardrobe-icon:hover + img {
  opacity: 1;
}

/************/
/* eating-room */
/************/

/* eating-room room plan icon and photo */
#eating-room-icon {
  left: 60%;
  top: 15%;
}

/*hovering over the icon will change it to red */
#eating-room-icon:hover {
  color: red;
}

#eating-room-detail-photo {
  top: 50%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the eating-room image */
#eating-room-icon:hover + img {
  opacity: 1;
}

/************/
/* arts-room */
/************/

/* arts-room room plan icon and photo */
#arts-room-icon {
  left: 60%;
  top: 35%;
}

/*hovering over the icon will change it to red */
#arts-room-icon:hover {
  color: red;
}

#arts-room-detail-photo {
  top: 34%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the arts-room image */
#arts-room-icon:hover + img {
  opacity: 1;
}

/*****************/
/* relaxing-room */
/*****************/

/* relaxing-room room plan icon and photo */
#relaxing-room-icon {
  left: 60%;
  top: 50%;
}

/*hovering over the icon will change it to red */
#relaxing-room-icon:hover {
  color: red;
}

#relaxing-room-detail-photo {
  top: 34%;
  left: 0;
  /* don't show the image initially */
  opacity: 0;
  transition: opacity .5s ease;
}

/* hovering over icon shows the relaxing-room image */
#relaxing-room-icon:hover + img {
  opacity: 1;
}
/* ... */

